refactor(earthwork): 优化土方平衡计算和项目管理功能
- 添加默认填土系数常量 DEFAULT_FILL_FACTOR
- 更新 computeBalanceDiff 方法注释说明填土系数用途
- 移除 Heightmap 依赖，改用 TerrainSurfaceSampler 获取地形高度
- 添加 regionNameEditingRegionId 字段管理区域名称编辑状态
- 修复区域名称输入框同步问题，避免重复设置
- 添加配置保存功能到网格显示选项
- 重置区域名称编辑状态当切换项目时
- 添加项目保存失败状态提示
- 修复项目区域映射返回不可变副本的安全性问题
- 添加英文和中文的项目保存失败提示语句