@@ -8,6 +8,7 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
@@ -21,7 +22,7 @@ public class EarthworkProject {
     private final Map<String, GradingRegion> regions = new LinkedHashMap<>();
 
     public Map<String, GradingRegion> getRegions() {
-        return Map.copyOf(regions);
+        return Collections.unmodifiableMap(new LinkedHashMap<>(regions));
     }
 
     public GradingRegion getRegion(String id) {
